src/pages/login/style/index.module.scss
@use '@/styles/mixins.scss' as *;

.page {
  min-height: 100vh;
  overflow-x: hidden;
  background: url('../../../assets/bg-login.png') top center no-repeat;
  background-size: 100%;
  background-attachment: fixed;
  @include flex-col();
}

.title {
  color: var(--colorText);
  @apply text-4xl font-bold;
  font-family: 'TitleFont', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
}
.subtext {
  color: var(--colorTextSecondary);
  text-align: center;
}

.footer {
  @apply py-10;
  color: var(--colorTextSecondary);
  a {
    color: var(--colorTextSecondary);
    font-size: var(--fontSizeLG);

    &:hover {
      color: var(--colorPrimaryText)
    }
  }

  div {
    @include flex-center;
    line-height: var(--lineHeightLG);
  }
}

